--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,9 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+vars:
+  default_string: 'N/A'
+
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -37,3 +40,9 @@ models:
     staging:
       +materialized: view
       +schema: staging
+    mart:
+      +materialized: table
+      warehouse:
+        +schema: warehouse
+      reporting:
+        +schema: reporting
