--- a/profiles.yml
+++ b/profiles.yml
@@ -1,7 +1,7 @@
-dbt_training:
+dbt_training2:
   outputs:
     dev:
-      account: eu45795.eu-west-2.aws
+      account: is05567.eu-central-1
       database: ANALYTICS_DEV
       password: "{{ env_var('DBT_PASSWORD') }}"
       role: DBT_TRAINING
@@ -10,8 +10,8 @@ dbt_training:
       type: snowflake
       user: "{{ env_var('DBT_USER') }}"
       warehouse: DBT_TRAINING_WH
-    prod: 
-      account: eu45795.eu-west-2.aws
+    prod:
+      account: is05567.eu-central-1
       database: ANALYTICS
       password: "{{ env_var('DBT_PASSWORD') }}"
       role: DBT_TRAINING
@@ -19,5 +19,5 @@ dbt_training:
       threads: 1
       type: snowflake
       user: "{{ env_var('DBT_USER') }}"
-      warehouse: DBT_TRAINING_WH   
+      warehouse: DBT_TRAINING_WH 
   target: dev
